--- a/npkpir_23/web/guest/sub/zestawienieRok.xhtml
+++ b/npkpir_23/web/guest/sub/zestawienieRok.xhtml
@@ -6,7 +6,7 @@
    
     <p:tabView id="akordeon" style="width: 1500px;">
             <ui:include src="zestawienieRok_dane.xhtml"/>
-            <ui:include src="zestawienieRok_wykres.xhtml"/>
+<!--            <ui:include src="zestawienieRok_wykres.xhtml"/>-->
     </p:tabView>
 
 </ui:composition>  
