--- a/npkpir_23/web/guest/sub/zobowiazania.xhtml
+++ b/npkpir_23/web/guest/sub/zobowiazania.xhtml
@@ -6,7 +6,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     >
-    <p:accordionPanel id="akordeon">
+    <p:tabView id="akordeon">
         <p:tab id="tab" title="Wykaz zobowiązań z tytułu ZUS">
     <h:form id="formZob">
         <p:outputPanel deferred="true">
@@ -329,6 +329,6 @@
         </p:outputPanel>
     </h:form>
     </p:tab>
-    </p:accordionPanel>
+    </p:tabView>
 </ui:composition>   
 
