--- a/npkpir_23/web/wspolny/wspolnySrodkiEwidencja.xhtml
+++ b/npkpir_23/web/wspolny/wspolnySrodkiEwidencja.xhtml
@@ -30,12 +30,11 @@
                     <div class="col-12">
                         <ui:include src="sub/layoutTablicaSrodkiKsiegowa/north.xhtml"/>
                     </div>
-
                     <!-- główna zawartość strony -->
                     <div class="flex-grow-1 grid grid-nogutter">
                         <!-- panel zachodni -->
                         <div class="col-12 md:col-3 lg:col-2"  style="max-width: 200px;">
-                            <ui:include src="#{STREwidencja.west}"/>  
+                           <ui:include src="../guest/sub/layoutNowy/west.xhtml"/>
                         </div>
 
                         <!-- panel centralny -->
