--- a/npkpir_23/web/guest/ksiegowaVATzest.xhtml
+++ b/npkpir_23/web/guest/ksiegowaVATzest.xhtml
@@ -19,23 +19,40 @@
 
                     </p:confirmDialog>  
                 </h:form>
+<f:view>
+                <bcf:ajaxs/>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/north.xhtml"/>
+                    </div>
 
-            <f:view>
-                <pe:layout fullPage="true" >
-                    <ui:include src="sub/layoutVATZestawienie/north.xhtml"/>  <!-- panel polnocny-->
-                    <ui:include src="sub/layoutVATZestawienie/south.xhtml"/>   <!-- panel poludniowy-->
-                    <ui:include src="sub/layoutVATZestawienie/west.xhtml"/>   <!-- panel zachodni-->
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-4 lg:col-3"  style="max-width: 260px;">
+                            <ui:include src="sub/layoutNowy/west.xhtml"/>
+                        </div>
 
-                    <pe:layoutPane position="center">
-                      
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                            <div class="vertical-container">
+
+                                 
                         <h:form id="form">
                             <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
                             <ui:include src="sub/vatzest.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
                         </h:form>
-                    </pe:layoutPane>
-                </pe:layout>
-            </f:view>
+                            </div>
+                        </div>
+                    </div>
 
+                    <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/south.xhtml"/>
+                    </div>
+                </div>
+            </f:view>
         </ui:define>
     </ui:composition>
 </html>
