--- a/npkpir_23/web/guest/sub/ksiega.xhtml
+++ b/npkpir_23/web/guest/sub/ksiega.xhtml
@@ -18,7 +18,7 @@
             <p:dataTable lazy="false"   var="wpis" value="#{ksiegaView.lista}" id="dokumentyKsiega" 
                           rowKey="#{wpis.idDok}" selection="#{ksiegaView.selDokument}" selectionMode="single"
                           emptyMessage="W danym miesiącu nie było żadnych zapisów"
-                          style="max-width: 1700px;" widgetVar="dokKsiega"
+                          style="max-width: 1750px;max-height: 700px;overflow-y: scroll;" widgetVar="dokKsiega"
                           > 
                 <f:facet name="header">  
                     <h:outputText value="Podatkowa księga przychodów i rozchodów" />
@@ -29,7 +29,7 @@
                     <p:row> 
                         <p:column rowspan="2" headerText="" width="20"/>  
                         <p:column rowspan="2" headerText="#{mgs.numerkolejny}" width="30"/>  
-                        <p:column rowspan="2" headerText="Data zdarzenia gosp." width="60"/>  
+                        <p:column rowspan="2" headerText="Data zdarzenia gosp." width="80"/>  
                         <p:column rowspan="2" headerText="Nr dowodu księgowego" width="120"/>  
                         <p:column colspan="2" headerText="#{mgs.kontrahent}" width="250"/>  
                         <p:column rowspan="2" headerText="Opis zdarzenia gospodarcz" width="120"/>  
@@ -77,7 +77,7 @@
                     <h:outputText value="#{wpis.nrWpkpir}"  rendered="#{wpis.nrWpkpir eq 0 ? false : true}"/>
                 </p:column>
                 <p:column id="dataColumn" headerText="data wyst" >  
-                    <h:outputText value="#{wpis.dataWyst.substring(5)}" ></h:outputText>
+                    <h:outputText value="#{wpis.dataWyst}" ></h:outputText>
                 </p:column>
                 <p:column id="nrWlDokColumn" headerText="nr wł"  >  
                     <h:outputText value="#{wpis.nrWlDk}" style="line-break: loose;"/>
