--- a/npkpir_23/web/guest/sub/pit_przegladaj.xhtml
+++ b/npkpir_23/web/guest/sub/pit_przegladaj.xhtml
@@ -6,7 +6,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     xmlns:c="http://java.sun.com/jsp/jstl/core">
-    <p:panelGrid columns="4" style="width: 700px" rendered="#{WpisView.ryczalt0ksiega1}" >
+    <p:panelGrid columns="4" style="width: 700px" rendered="#{WpisView.ryczalt0ksiega1 eq true}" >
             <h:form id="formpi" style="width: 500px" >
 
                 <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
@@ -110,7 +110,7 @@
                 </p:panelGrid>
             </h:form>
         </p:panelGrid>
-    <p:panelGrid columns="4" style="width: 600px" rendered="#{!WpisView.ryczalt0ksiega1}">
+    <p:panelGrid columns="4" style="width: 600px" rendered="#{WpisView.ryczalt0ksiega1 eq false}">
                 <h:form id="formpi1" style="width: 400px" >
                     <p:growl life="3600"  id="messages" ><p:autoUpdate/></p:growl>
 
