--- a/npkpir_23/web/guest/sub/vatzest.xhtml
+++ b/npkpir_23/web/guest/sub/vatzest.xhtml
@@ -7,7 +7,7 @@
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-    <f:event type="preRenderView" listener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt)}"/>
+    <f:event type="preRenderView" listener="#{ewidencjaVatView.stworzenieEwidencjiZDokumentow(WpisView.podatnikObiekt, false)}"/>
     <p:tabView>
         <p:tab id="ewid1" title="ewidencje">
             <p:tabView value="#{ewidencjaVatView.ewidencje}"  var="item"  >
@@ -18,7 +18,8 @@
                     <f:ajax event="click" listener="#{ewidencjaVatView.ustawNazwaewidencji((item[0].nazwaewidencji))}"/>
                 </p:commandButton>
                 <p:separator/>
-                    <p:dataTable lazy="false"  id="tabela" value="#{item}" var="itemik" style="width: 1150px; margin-bottom: 30px;">
+                    <p:dataTable lazy="false"  id="tabela" value="#{item}" var="itemik" 
+                                 style="max-width: 1250px;max-height: 700px;overflow-y: scroll;">
                         <f:facet name="header">  
                             <h:outputText value="Ewidencja VAT  #{item[0].nazwaewidencji.nazwa}" />  
                         </f:facet>
@@ -73,7 +74,8 @@
                 <p:separator/>
             <p:separator/>
             <p:dataTable lazy="false"  value="#{ewidencjaVatView.sumydowyswietleniasprzedaz}" var="itemik" 
-                         selection="#{ewidencjaVatView.goscwybralsuma}" rowKey="#{itemik.ewidencja.nazwa}" style="width: 55%;"
+                         selection="#{ewidencjaVatView.goscwybralsuma}" rowKey="#{itemik.ewidencja.nazwa}" 
+                         style="max-width: 850px;max-height: 700px;overflow-y: scroll;"
                          >
                 <f:facet name="header">
                     <h:outputText value="zestawienie ewidencji vat - sprzedaż"/>
