--- a/npkpir_23/web/ksiegowaFK/guestFKWynik.xhtml
+++ b/npkpir_23/web/ksiegowaFK/guestFKWynik.xhtml
@@ -11,21 +11,51 @@
         <ui:define name="body">
             <bcf:ajaxs/>
             <f:view>
-                <pe:layout fullPage="true" >
-                    <ui:include src="sub/layoutTablica/north.xhtml"/>  <!-- panel polnocny-->
-                    <ui:include src="sub/layoutTablica/west.xhtml"/>   <!-- panel zachodni-->
-                    <pe:layoutPane position="center">
-                        <p:panel toggleable="true" closable="true" style="width: 90%;" rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
-                            <f:facet name="header">
-                                <h:outputText value="Strona służy do wyświetlania wyniku w danym miesiącu oraz narastająco. Zmiana miesiąca możliwa jest w panelu po lewej."/><br/>
-                                <h:outputText value="Dane po pobraniu mogąć być sortowane. Wystarczy kliknąć na symbol strzałek znajdujących sie obok opisu kolumny."/> <br/>
-                            </f:facet>
-                        </p:panel>
-                        <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
-                        <ui:include src="../wspolny/sub/wynik.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                         
-                    </pe:layoutPane><ui:include src="sub/layout/south.xhtml"/> 
-                </pe:layout>
+              
+                <div class="flex flex-column" style="height: 100vh;"> <!-- Zastąpienie pe:layout -->
+
+                    <!-- North Pane -->
+                    <div class="flex-none">
+                        <ui:include src="sub/layoutNowy/north.xhtml"/>  <!-- panel północny -->
+                    </div>
+
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-3 lg:col-2"  style="max-width: 200px;">
+                            <ui:include src="sub/layoutTablica/west.xhtml"/>   <!-- panel zachodni-->
+                            <!-- Center Pane -->
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex">
+                            <div class="vertical-container">
+
+                                <div id="ramki"></div>
+                                <h:form>
+                                    <p:growl life="3600"  ><p:autoUpdate/></p:growl>
+                                </h:form>
+
+                                <p:panel toggleable="true" closable="true" style="width: 90%;" rendered="#{facesContext.viewRoot.locale.language.equals('pl')}">
+                                    <f:facet name="header">
+                                        <h:outputText value="Strona służy do wyświetlania wyniku w danym miesiącu oraz narastająco. Zmiana miesiąca możliwa jest w panelu po lewej."/><br/>
+                                        <h:outputText value="Dane po pobraniu mogąć być sortowane. Wystarczy kliknąć na symbol strzałek znajdujących sie obok opisu kolumny."/> <br/>
+                                    </f:facet>
+                                </p:panel>
+                                <ui:include src="sub/menu_wiad.xhtml"/>   <!-- menu contextowe i pole wiadomosci growl-->
+                                <ui:include src="../wspolny/sub/wynik.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <!-- South Pane -->
+                    <div class="flex-none">
+                        <ui:include src="sub/layoutNowy/south.xhtml"/> <!-- panel południowy -->
+                    </div>
+
+                </div>
             </f:view>
         </ui:define>
     </ui:composition>
