biblioteki js nie moga miec takich samych nazw nawet jak sa w odrebnych plikach !important

--- a/npkpir_23/web/templateFK.xhtml
+++ b/npkpir_23/web/templateFK.xhtml
@@ -44,7 +44,7 @@
             <h:outputScript library="js_fk" name="wydruki_fk.js"/>
             <h:outputScript library="js_fk" name="dialog_bilanse.js"/>
             <h:outputScript library="js_fk" name="dialog_wpis_srodkitrwale.js"/>
-            <h:outputScript library="js_pkpir" name="faktura.js"/>
+            <h:outputScript library="js_pkpir" name="fakturapkpir.js"/>
             <h:outputScript library="js_fk" name="dialog_ewidencjavatRK.js"/>
             <h:outputScript name="jsf.js" library="javax.faces" target="head" />
             <h:outputStylesheet library="webjars" name="font-awesome/6.5.2/css/all.min-jsf.css" />
