--- a/npkpir_23/web/template.xhtml
+++ b/npkpir_23/web/template.xhtml
@@ -33,7 +33,7 @@
             <h:outputScript library="js_pkpir" name="dialog_pkpir.js"/>
             <h:outputScript library="js_pkpir" name="vat.js"/>
             <h:outputScript library="js_pkpir" name="pit.js"/>
-            <h:outputScript library="js_pkpir" name="faktura.js"/>
+            <h:outputScript library="js_pkpir" name="fakturapkpir.js"/>
             <h:outputScript library="js_pkpir" name="tablewalking.js"/>
             <h:outputScript library="js_pkpir" name="wydruki_pkpir.js"/>
             <h:outputStylesheet library="webjars" name="font-awesome/6.5.2/css/all.min-jsf.css" />
