--- a/npkpir_23/web/manager/managerDeklaracjevat.xhtml
+++ b/npkpir_23/web/manager/managerDeklaracjevat.xhtml
@@ -3,24 +3,43 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:pe="http://primefaces.org/ui/extensions"
+      xmlns:bcf="http://brzaskun.com/facelets">
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
             <h:outputText value="Tworzenie i edycja deklaracji vat"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <f:view>
-                <pe:layout fullPage="true" >
-                    <ui:include src="sub/layout/north.xhtml"/>  <!-- panel polnocny-->
-                    <ui:include src="sub/layout/south.xhtml"/>   <!-- panel poludniowy-->
-                    <ui:include src="sub/layout/west.xhtml"/>   <!-- panel zachodni-->
-<!--                    <ui:include src="sub/layout/east.xhtml"/>    panel zachodni-->
-                    <pe:layoutPane position="center">
-                        <ui:include src="sub/menu_wiad.xhtml"/>  <!--  menu contextowe i pole wiadomosci growl-->
-                        <ui:include src="sub/deklaracjevat.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
-                    </pe:layoutPane>
-                </pe:layout>
-            </f:view>
+         
+            <bcf:ajaxs/>
+
+             <f:view>
+                <div class="flex flex-column min-h-screen">
+                    <!-- panel północny -->
+                    <div class="col-12">
+                        <ui:include src="sub/layoutNowy/north.xhtml"/>
+                    </div>
+
+                    <!-- główna zawartość strony -->
+                    <div class="flex-grow-1 grid grid-nogutter">
+                        <!-- panel zachodni -->
+                        <div class="col-12 md:col-3 lg:col-2"  style="max-width: 220px;">
+                            <ui:include src="sub/layoutNowy/west.xhtml"/>
+                        </div>
+
+                        <!-- panel centralny -->
+                        <div class="col-12 md:col-9 lg:col-10 flex flex-column">
+                     <ui:include src="sub/menu_wiad.xhtml"/>  <!--  menu contextowe i pole wiadomosci growl-->
+                        <ui:include src="sub/deklaracjevat.xhtml"/>     <!-- właściwa tablica z danymi z księgi-->
+                        </div>
+                    </div>
+
+                   <!-- panel południowy (footer) -->
+                    <div class="col-12">
+                         <ui:include src="sub/layoutNowy/south.xhtml"/>
+                    </div>
+                </div>
+             </f:view>
         </ui:define>
     </ui:composition>
 </html>
