--- a/npkpir_23/web/manager/sub/aktywacja.xhtml
+++ b/npkpir_23/web/manager/sub/aktywacja.xhtml
@@ -25,7 +25,7 @@
                     <p:ajax event="click" partialSubmit="true" update="@form"/>
                 </p:commandButton>
                 <h1><h:outputText value="Wykaz firm"/></h1>
-                <p:dataTable lazy="false"  value="#{aktywacjaPodatnikow.listapodatnikow}" var="item" style="max-width: 1100px;"  sortBy="#{item.printnazwa}">
+                <p:dataTable lazy="false"  value="#{aktywacjaPodatnikow.listapodatnikow}" var="item" style="max-width: 1100px;max-height: 800px; overflow-y: scroll;"  sortBy="#{item.printnazwa}">
                     <p:column>
                         <f:facet name="header">
                             <h:outputText value="Nip"/>
