--- a/npkpir_23/web/manager/sub/dodpodatnikSC.xhtml
+++ b/npkpir_23/web/manager/sub/dodpodatnikSC.xhtml
@@ -16,6 +16,7 @@
         <!--    panel wpisywania osoby fizycznej-->
          <p:panel header="Wybierz firmę do edycji" style="width: 500px;"/>
         <h:selectOneListbox id="podatnikWpisu" value="#{podatnikView.selectedDodedycja}" style="width: 350px; height: 250px;" converter="#{podatConv}">
+             <f:selectItem itemLabel="wybierz podatnika" noSelectionOption="true"/>
                     <f:selectItems value="#{podatnikWyborView.listaPodatnikowFKmanager}" var="p" itemLabel="#{p.nazwapelnaPDF}" itemValue="#{p}"/>
                     <p:ajax event="change"  update=":formdod2" global="false" listener="#{podatnikView.skopiujdoedycji}"/>
         </h:selectOneListbox>
