--- a/npkpir_23/web/manager/sub/waloryzacja.xhtml
+++ b/npkpir_23/web/manager/sub/waloryzacja.xhtml
@@ -16,7 +16,7 @@
                     <p:dataExporter type="xls" target="datalist" fileName="lista"/>
                 </p:commandButton>
                     <h1><h:outputText value="List"/></h1>
-                    <p:dataTable lazy="false"  id="datalist" value="#{fakturaWaloryzacjaView.lista}" var="item" style="width: 1500px;" rowKey="#{item.id}"  sortBy="#{item.kontrahent.nazwabezCudzy}" >
+                    <p:dataTable lazy="false"  id="datalist" value="#{fakturaWaloryzacjaView.lista}" var="item" style="max-width: 1500px;max-height: 800px;overflow-y: scroll" rowKey="#{item.id}"  sortBy="#{item.kontrahent.nazwabezCudzy}" >
                         <p:column width="30">
                             <f:facet name="header">
                                 <h:outputText value="Id"/>
