--- a/npkpir_23/web/admin/sub/podatnicy.xhtml
+++ b/npkpir_23/web/admin/sub/podatnicy.xhtml
@@ -7,6 +7,7 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
+     <h:form id="podatnicy">
      <p:outputPanel style="padding: 10px;">
          <p:panel header="Statystyka księgowych" style="width:1200px;"/>
          <p:panelGrid columns="4">
@@ -137,4 +138,5 @@
             </p:summaryRow>
         </p:dataTable>
     </p:outputPanel>
+     </h:form>
 </ui:composition>   
