--- a/npkpir_23/web/admin/sub/statystyka.xhtml
+++ b/npkpir_23/web/admin/sub/statystyka.xhtml
@@ -7,7 +7,7 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
-    //tu jest kalkulacja księgowych
+    <h:form id="statystyka">
     <p:outputPanel style="padding: 10px;">
         <h:outputText value="Rok:" style="text-shadow: #6374AB 1px -1px 1px"/>
         <p:selectOneMenu id="rokWpisu" value="#{statisticAdminView.rok}" style="width: 70px;">
@@ -71,4 +71,5 @@
             </p:column>
         </p:dataTable>
     </p:outputPanel>
+    </h:form>
 </ui:composition>   
