--- a/npkpir_23/web/admin/sub/statystykakalkulacja.xhtml
+++ b/npkpir_23/web/admin/sub/statystykakalkulacja.xhtml
@@ -7,15 +7,15 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
-
+<h:form id="statystykakalkulacja">
     <p:panelGrid columns="5">
-        <p:commandButton value="generuj" actionListener="#{statystykaKalkulacjaView.generuj}" update="form:datatable" style="width: 120px; margin-left: 10px;"/>
+        <p:commandButton value="generuj" actionListener="#{statystykaKalkulacjaView.generuj}" update="statystykakalkulacja:datatable" style="width: 120px; margin-left: 10px;"/>
         <p:selectOneMenu id="rokWpisu" value="#{statystykaKalkulacjaView.rok}" style="width: 120px; margin-left: 10px;">
-            <p:ajax event="change" partialSubmit="true" global="false" listener="#{statystykaKalkulacjaView.czysclista}" update="form:datatable"/>
+            <p:ajax event="change" partialSubmit="true" global="false" listener="#{statystykaKalkulacjaView.czysclista}" update="statystykakalkulacja:datatable"/>
             <f:selectItems value="#{roki.rokiList}"/>
         </p:selectOneMenu>
         <p:commandButton value="zaksięguj" actionListener="#{statystykaKalkulacjaView.zaksieguj}" style="width: 120px; margin-left: 10px;"/>
-        <p:commandButton value="pobierz" actionListener="#{statystykaKalkulacjaView.pobierz}" update="form:datatable" style="width: 120px; margin-left: 10px;"/>
+        <p:commandButton value="pobierz" actionListener="#{statystykaKalkulacjaView.pobierz}" update="statystykakalkulacja:datatable" style="width: 120px; margin-left: 10px;"/>
         <p:commandButton value="drukuj" actionListener="#{statystykaKalkulacjaView.drukuj}" style="width: 120px; margin-left: 20px;"/>
     </p:panelGrid>
     <p:dataTable lazy="false"  value="#{statystykaKalkulacjaView.podatnikroklista}" var="item" id="datatable" style="width: 1350px; padding: 10px;"
@@ -94,4 +94,5 @@
             <bcf:outputkurs value="#{item.ranking}"/>
         </p:column>
     </p:dataTable>
+</h:form>
 </ui:composition>   
